--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -23,4 +23,13 @@
     animation-delay: 0.5s;
     animation-duration: 1.5s;
   }
+
+  .arrow-down {
+    margin-top: 1rem;
+
+    .animated {
+      animation-duration: 2s;
+      animation-iteration-count: infinite;
+    }
+  }
 }
