--- a/sass/components/_resume.scss
+++ b/sass/components/_resume.scss
@@ -1,4 +1,8 @@
 #resume {
+  background: $body-bg;
+  background-attachment: fixed;
+  padding-bottom: 10%;
+
   .about {
     display: flex;
 
@@ -51,6 +55,19 @@
 
       @media (max-width: 800px) {
         width: 100%;
+      }
+    }
+  }
+
+  .history-item {
+    font-size: 1rem;
+
+    .history-title {
+      font-family: $primary-font;
+      font-size: 1.2rem;
+
+      span {
+        font-size: .9rem;
       }
     }
   }
